--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.m039.common-unity-library",
-  "version": "0.2.0",
+  "name": "com.m039.common",
+  "version": "0.2.1",
   "displayName": "Common Unity Library",
   "description": "A library with common for all my projects code or assets",
   "unity": "2019.1",
@@ -10,6 +10,6 @@
   ],
   "author": {
     "name": "Dmitry Mozgin",
-    "url": "http://twitter.com/m0391n"
+    "url": "https://github.com/m039"
   }
 }
